--- a/src/todo.txt
+++ b/src/todo.txt
@@ -1,5 +1,9 @@
-[ ] Replace end turn/game alerts with modal popups
-[ ] Remove "hint" display unless player tries to make two incorrect moves
+[X] Replace end turn/game alerts with modal popups
+[X] Remove "hint" display unless player tries to make two incorrect moves
+[X] Add an icon or highlight to the player score <div>s, to show whose turn it is
+[ ] Write some tests to for move validation code
+[ ] Update portrait CSS
+[ ] Change scene transition animation
 [ ] Stagger the "flip" animation of captured pieces
 [ ] Add a "countdown" type effect to the scoring numbers
 [ ] Add some simple sound effects
